objects/Apttus_Base2__UIComponentConfigurationActionProvider2__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ClassName__c</fullName>
        <label>Class name for data provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Configuration2__c</fullName>
        <label>Configuration</label>
        <referenceTo>Apttus_Base2__UIComponentConfiguration__c</referenceTo>
        <relationshipLabel>Configuration</relationshipLabel>
        <relationshipName>Configuration2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>90</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <label>Package name for data provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ProviderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Provider</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Apttus_Base2__UIComponentProvider__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Action</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Base2__UIComponentProvider__c</referenceTo>
        <relationshipLabel>Action Provider</relationshipLabel>
        <relationshipName>ActionProvider2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configuration Action Provider 2</label>
    <listViews>
        <fullName>Apttus_Base2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Base2__ProviderId__c</columns>
        <columns>Apttus_Base2__Configuration2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Configuration Action Providers</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Action Providers 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>